--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a yawning lion">
- <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a yawning lion" title="The Lion Sleeps"
+ <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a yawning lion" title="The Lion Sleeps">
 
 </body>
 </html>
